--- a/lucene-research/lucene-api/src/main/resources/application.yaml
+++ b/lucene-research/lucene-api/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/movies?useUnicode=yes&characterEncoding=UTF-8&serverTimezone=CET
+    url: jdbc:mysql://localhost:3306/movies?useUnicode=yes&characterEncoding=UTF-8&serverTimezone=CET&zeroDateTimeBehavior=round
     username: root
     password: root
   jpa:
