--- a/lucene-research/movies/package.json
+++ b/lucene-research/movies/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "chart.js": "^3.8.0",
+    "classnames": "^2.3.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.2.0",
